# unkei

./: .gitignore  README.md
android/: .gitignore
android/app/: build.gradle  proguard-rules.pro
catkin/src/dpptam/: dpptam.launch
server/core/: .gitignore  ros_scripts.py  server.py
server/pipeline/ORB_SLAM/: .gitignore  KeyFrameTrajectory.txt
src/android/EECS393Project/: settings.gradle
src/android/Unkei/: settings.gradle
src/server/: pseudocode.cc  run_unkei.sh  unkei.sh  utils.sh
src/server/.ropeproject/: globalnames
src/server/bag_from_images/: CMakeLists.txt  main.cc
src/server/core/: BufferedReader.cc  BufferedReader.h  BufferedReader.hh  ClientConnection.cc  ClientConnection.h  ClientFileHandler.cc  ClientFileHandler.h  ClientHandler.h  CloudFilesystemView.cc  CloudFilesystemView.h  FilesystemClientHandler.cc  FilesystemClientHandler.h  JobClientHandler.cc  JobClientHandler.h  Makefile  Nuke-Cola.SLDASM  ServerListener.cc  ServerListener.h  ServerUv.cc  ServerUv.h  SpookyHash.cc  SpookyHash.h  ccuv.cc  ccuv.h  fileuv.cc  fileuv.h  initialize  initialize.cc  job_submission.py  netuv.cc  netuv.h  purge.py  request_client.py  server  server.cc
src/server/pipeline/DPPTAM_unros/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dpptam.launch  oldCMakeLists.txt
src/server/pipeline/DPPTAM_unros/catkin_generated/: package.cmake  pkg.develspace.context.pc.py
src/server/pipeline/DPPTAM_unros/data/plant/: accelerometer.txt  depth.txt  rgb.txt
src/server/pipeline/DPPTAM_unros/devel/: .rosinstall  setup.sh
src/server/pipeline/DPPTAM_unros/devel/lib/pkgconfig/: dpptam.pc
src/server/pipeline/DPPTAM_unros/devel/share/dpptam/cmake/: dpptamConfig.cmake
src/server/pipeline/DPPTAM_unros/gtest/: CTestTestfile.cmake  Makefile
src/server/pipeline/DPPTAM_unros/include/: MainWrapper.h
src/server/pipeline/DPPTAM_unros/include/dpptam/: DenseMapping.h  MainWrapper.h  PlyListener.h  SemiDenseMapping.h  SemiDenseTracking.h  vo_system.h
src/server/pipeline/DPPTAM_unros/src/: .vo_system.cpp.swp  DenseMapping.cpp  MainWrapper.cc  MesherExec.cpp  PlyListener.cpp  SemiDenseMapping.cpp  SemiDenseTracking.cpp  main.cpp  vo_system.cpp
src/server/pipeline/DPPTAM_unros/src/map_and_poses/: MAP14.ply  MAP15.ply  MAP16.ply  MAP17.ply  MAP18.ply  MAP19.ply  MAP20.ply  MAP21.ply  MAP22.ply  MAP23.ply  MAP24.ply  MAP25.ply  MAP26.ply  MAP27.ply  MAP28.ply  MAP29.ply  MAP30.ply  MAP31.ply  MAP32.ply  MAP33.ply  MAP34.ply  MAP35.ply  MAP36.ply  MAP37.ply  MAP38.ply  MAP39.ply  MAP40.ply  MAP41.ply  sup0.ply  sup1.ply  sup10.ply  sup11.ply  sup12.ply  sup13.ply  sup14.ply  sup15.ply  sup2.ply  sup3.ply  sup4.ply  sup5.ply  (+5 more)
src/server/pipeline/DPPTAM_unros/src/orb_slam2_src/: Mesher.cpp  PlyListener.cpp  SemiDenseMapping.cpp  SemiDenseTracking.cpp  vo_system.cpp
src/server/pipeline/DPPTAM_unros/src/orb_slam2_src/map_and_poses/: MAP14.ply  MAP15.ply  MAP16.ply  MAP17.ply  MAP18.ply  MAP19.ply  MAP20.ply  MAP21.ply  MAP22.ply  MAP23.ply  MAP24.ply  MAP25.ply  MAP26.ply  MAP27.ply  MAP28.ply  MAP29.ply  MAP30.ply  MAP31.ply  MAP32.ply  MAP33.ply  MAP34.ply  MAP35.ply  MAP36.ply  MAP37.ply  MAP38.ply  MAP39.ply  MAP40.ply  MAP41.ply  MAP42.ply  MAP43.ply  MAP44.ply  MAP45.ply  MAP46.ply  MAP47.ply  MAP48.ply  MAP49.ply  MAP50.ply  MAP51.ply  MAP52.ply  MAP53.ply  (+26 more)
src/server/pipeline/DPPTAM_unros/src/orb_slam2_src/orbslam/: example_main.cc  example_semidense_mapping.cc  example_system.cc
src/server/pipeline/DPPTAM_unros/src/pipes/: Makefile
src/server/pipeline/ORB_SLAM/debug/: .gitignore  CMakeLists.txt
src/server/unkei_server/: server.py  (+5 more)
tools/: configure_project
(+184 files in other folders)
